# craftededgesolutions.africa

./: .gitignore  Crafted Edge Solutions.html  QUICK_REFERENCE.md  README.md  SESSION_MEMORY.md  SETUP_LOCAL_AI.md  SETUP_MD_TO_PDF.md  SSH_SETUP.md  SYSTEM_STATE.md  about.html  blog-draft-mobile-seo.md  builder.html  cheatsheet.html  contact.html  docker-compose.listmonk.yml  editor.html  handoff.html  index.html  llms.txt  main.js  motion.js  playbook.html  robots.txt  services.html  sitemap.xml  solutions.html  style.css  wellness-concept.html  wrangler.jsonc
platform/: .env.example  .gitignore  .railwayignore  Makefile  manage.py  pyproject.toml  railway.json  requirements.txt
platform/accounts/: admin.py  models.py
platform/accounts/migrations/: 0001_initial.py
platform/agents/: admin.py  models.py  urls.py  views.py
platform/agents/migrations/: 0001_initial.py
platform/agents/services/: agent.py  whatsapp.py
platform/ces_platform/: urls.py  wsgi.py
platform/ces_platform/settings/: base.py  dev.py
platform/core/: views.py
platform/dashboard/: urls.py  views.py
platform/home/: models.py  wagtail_hooks.py
platform/home/migrations/: 0001_initial.py  0002_casestudypage_solutionsindexpage.py  (+1 more)
platform/insights/: models.py  urls.py  views.py
platform/newsletter/: models.py  services.py  urls.py  views.py
platform/subscriptions/: admin.py  models.py  services.py  urls.py  views.py
platform/templates/: 404.html  500.html  base.html  careers.html  pricing.html
platform/validator/: apps.py  models.py  services.py  urls.py  views.py
(+41 files in other folders)
